# tauri-leptos-android-app

./: .gitignore  Cargo.toml  Trunk.toml  index.html  styles.css
.devcontainer/: Dockerfile  devcontainer.json
src/: components.rs  main.rs
src-tauri/: tauri.conf.json
