[package]
name = "tauri-app-ui"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
leptos = { version = "0.5.0-rc2", features = ["csr", "nightly"] }
rand = "0.8.5"
stylers = "0.3.2"
serde = { version = "1.0.193", features = ["derive"] }
serde-wasm-bindgen = "0.6"
wasm-bindgen-futures = "0.4.40"
js-sys = "0.3"

[workspace]
members = ["src-tauri"]
